--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mongoose-schema-jsonschema": "^1.1.15",
     "morgan": "^1.9.0",
     "require-directory": "^2.1.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "superagent": "^5.0.6",
     "supertest": "^3.3.0",
     "swagger-ui-express": "^4.0.2"
